deploy/kustomize/overlays/preprod/patch-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: backend
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
