deploy/kustomize/overlays/preprod/patch-route-host.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: backend
spec:
  host: backend-preprod.apps-crc.testing
